# Trevor

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: SETTINGS.md  SHORTCUTS.md  USER_GUIDE.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
src/components/: ErrorBoundary.tsx  VaultPicker.tsx
src/components/canvas/: CanvasView.tsx
src/components/command/: CommandPalette.tsx
src/components/dialogs/: MoveToFolderDialog.tsx
src/components/editor/: CodeBlock.tsx  EditorToolbar.tsx  FindInNote.tsx  MarkdownPreview.tsx  MermaidBlock.tsx
src/components/focus/: PomodoroTimer.tsx
src/components/graph/: GraphView.tsx
src/components/help/: ShortcutsHelp.tsx
src/components/layout/: AppLayout.tsx  EditorPane.tsx  NoteList.tsx  Sidebar.tsx  TitleBar.tsx
src/components/panels/: HistoryPanel.tsx  RightPanel.tsx
src/components/settings/: SettingsPage.tsx  SnippetSection.tsx
src/components/tags/: TagManager.tsx
src/components/ui/: PortalMenu.tsx  Toggle.tsx
src/components/vault/: VaultSwitcher.tsx
src/lib/: platform.ts
src/lib/canvas/: types.ts
src/lib/export/: index.ts
src/lib/fs/: index.ts  mock-fs.ts  tauri-fs.ts  types.ts
src/lib/graph/: index.ts
src/lib/history/: index.ts  note-history.ts
src/lib/pins/: store.ts
src/styles/: globals.css
(+10 files in other folders)
