[package]
name = "trevor"
version = "0.1.0"
description = "Trevor — Local-first markdown notes."
authors = ["Trevor Team"]
license = "MIT"
edition = "2021"

[lib]
name = "trevor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
notify-debouncer-mini = "0.4"
walkdir = "2.5"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
